# clawx

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/clawx-agent/: Cargo.toml
crates/clawx-agent/src/: agent_loop.rs  compression.rs  delegate.rs  lib.rs  sub_agent.rs
crates/clawx-channels/: Cargo.toml
crates/clawx-channels/src/: channel.rs  lib.rs  telegram.rs
crates/clawx-cli/: Cargo.toml
crates/clawx-cli/src/: main.rs
crates/clawx-core/: Cargo.toml
crates/clawx-core/src/: config.rs  error.rs  lib.rs  message.rs  tool.rs
crates/clawx-llm/: Cargo.toml
crates/clawx-llm/src/: decorator.rs  lib.rs  provider.rs  stream.rs
crates/clawx-llm/src/providers/: anthropic.rs  openai.rs
crates/clawx-memory/: Cargo.toml
crates/clawx-memory/src/: lib.rs  sqlite.rs  store.rs
crates/clawx-tools/: Cargo.toml
crates/clawx-tools/src/: lib.rs  registry.rs  security.rs
crates/clawx-tools/src/builtin/: echo.rs  file.rs  mod.rs  shell.rs
docs/: deploy-telegram.md
