[workspace]
resolver = "2"
members = [
    "crates/clawx-core",
    "crates/clawx-llm",
    "crates/clawx-agent",
    "crates/clawx-memory",
    "crates/clawx-tools",
    "crates/clawx-channels",
    "crates/clawx-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
clawx-core = { path = "crates/clawx-core" }
clawx-llm = { path = "crates/clawx-llm" }
clawx-agent = { path = "crates/clawx-agent" }
clawx-memory = { path = "crates/clawx-memory" }
clawx-tools = { path = "crates/clawx-tools" }
clawx-channels = { path = "crates/clawx-channels" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async traits and streams
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Security
zeroize = { version = "1", features = ["derive"] }
