[package]
name = "clawx-channels"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clawx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
zeroize.workspace = true
