[package]
name = "clawx-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "clawx"
path = "src/main.rs"

[dependencies]
clawx-core.workspace = true
clawx-llm.workspace = true
clawx-agent.workspace = true
clawx-memory.workspace = true
clawx-tools.workspace = true
clawx-channels.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
