[package]
name = "clawx-memory"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clawx-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
rusqlite.workspace = true
